--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-ui": "^2.8.2",
     "jquery": "^3.4.1",
     "vue": "^2.5.2",
+    "vue-bus": "^1.2.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
   },
