--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "echarts": "^4.2.1",
+    "echarts-wordcloud": "^1.1.3",
     "element-ui": "^2.8.2",
     "jquery": "^3.4.1",
     "vue": "^2.5.2",
